- Added SteamFriendsCallback.onGameServerChangeRequested(). (#48)
- Removed support for Linux 32-bit.
- Updated native Windows build to a newer version of premake 5 (alpha 11).
- Added some missing SteamApps functions. (#50)
- Added SteamScreenshots wrapper.

[1.6.2]
- Cleaned up Maven project structure. Removed superfluous releases of 'steamworks4j-parent' and 'steamworks4j-jnigen' repositories.
- Reduced JNI overhead for invocations of callback adapters.
- Fixed crash when trying to run multiple processes using steamworks4j simultaneously.

[1.6.1]
- Updated to Steamworks SDK v1.39.
- Added SteamFriends.setPersonaName().
- Added remaining functions to activate Steam overlay.
- Added functions for rich presence and game invites to SteamFriends (#38).
- API change: the SteamFriendsCallback interface has been extended to reflect the latest additions.
- API change: removed SteamID.getNativeHandle(). All native handles can now be queried with SteamNativeHandle.getNativeHandle().
- The default behaviour of SteamAPI.isSteamRunning() has changed to *not* call SteamAPI_IsSteamRunning(), see JavaDocs for more information.
- Added SteamAPI.releaseCurrentThreadMemory().

[1.6.0]
- Added SteamController interface.
- Fixed resource files (prebuilt native libraries) included in source jars.

[1.5.0]
- Updated to Steamworks SDK v1.38a.
- Added SteamUserCallback.onMicroTxnAuthorization() callback.
- API change: renamed SteamUserCallback.onValidateAuthTicketResponse() to SteamUserCallback.onValidateAuthTicket().
- API change: all uses of appID in member functions and callbacks now use 32-bit ints.

[1.4.0]
- Removed steamworks4j-natives subproject. Native libraries are now added as resources to steamworks4j.jar directly.
- Added functions to query global stats. This also adds a new method to SteamUserStatsCallback (#36).
- Updated shared library loader, adding a few fallbacks in case executables cannot be written to, or launched from, java.io.tmpdir.